<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">酷狗音乐</string>
    <string name="search_hint">搜索音乐、歌手、歌词</string>
    <string name="tab_recommend">推荐</string>
    <string name="tab_rank">排行榜</string>
    <string name="tab_playlist">歌单</string>
    <string name="tab_library">我的</string>
    <string name="tab_settings">设置</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="next">下一首</string>
    <string name="previous">上一首</string>
    <string name="lyrics">歌词</string>
    <string name="hot_search">热门搜索</string>
    <string name="no_results">未找到结果</string>
    <string name="loading">加载中...</string>
    <string name="error_network">网络错误</string>
    <string name="error_unknown">未知错误</string>
    <string name="login">登录</string>
    <string name="login_phone">手机号登录</string>
    <string name="login_qr">扫码登录</string>
    <string name="logout">退出登录</string>
    <string name="phone_number">手机号</string>
    <string name="sms_code">验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="settings_api_url">API地址</string>
    <string name="settings_quality">音质选择</string>
    <string name="settings_about">关于</string>
    <string name="settings_clear_cache">清除缓存</string>
    <string name="quality_128">标准 128kbps</string>
    <string name="quality_320">高品质 320kbps</string>
    <string name="quality_flac">无损 FLAC</string>
    <string name="repeat_off">关闭循环</string>
    <string name="repeat_one">单曲循环</string>
    <string name="repeat_all">列表循环</string>
    <string name="shuffle_on">随机播放</string>
    <string name="shuffle_off">顺序播放</string>
    <string name="empty_playlist">歌单为空</string>
    <string name="empty_library">还没有收藏内容</string>
    <string name="song_count">%d 首</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="nav_home">首页</string>
    <string name="nav_search">搜索</string>
    <string name="nav_library">音乐库</string>
    <string name="see_all">查看全部</string>
    <string name="notification_permission_title">通知权限</string>
    <string name="notification_permission_desc">需要通知权限来显示播放控制</string>
</resources>
